2008-11-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/wavparse/gstwavparse.c: (uint64_ceiling_scale_int),
	(uint64_ceiling_scale), (gst_wavparse_calculate_duration),
	(gst_wavparse_stream_headers):
	Fix the scaling code.
	Fix parsing of the INFO chunks, we were reading the wrong number of
	bytes.  Fixes #561580.

2008-11-20  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/matroska/matroska-mux.c:
	Fix NULL pointer dereference of an unset codec_id in the recently 
	added Dirac paths

2008-11-20  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/Makefile.am:
	Just keep disabling elements that hang the states test until it
	works.

2008-11-20  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/libpng/gstpngenc.c:
	Don't flush downstream after every buffer - that's not what
	this libpng callback is for at all!

2008-11-17  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* sys/v4l2/v4l2src_calls.c:
	  (gst_v4l2src_probe_caps_for_format_and_size), (sort_by_frame_size),
	  (gst_v4l2src_probe_caps_for_format):
	  Turns out we don't always get the frame sizes in a predefined
	  order from lowest to highest resolution, so let's just sort the
	  list by frame size once we've queried the possible resolutions
	  rather than assume any particular order. Fixes probed caps for
	  the camera in my HP2133 mini notebook and makes v4l2src default
	  to a decent size.

2008-11-16  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_audio_caps):
	* gst/matroska/matroska-ids.h:
	Make mkvdemux aware of E-AC3.

2008-11-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstrtp.c: (plugin_init):
	* gst/rtp/gstrtpjpegdepay.c: (gst_rtp_jpeg_depay_base_init),
	(gst_rtp_jpeg_depay_class_init), (gst_rtp_jpeg_depay_init),
	(gst_rtp_jpeg_depay_finalize), (MakeTables), (MakeQuantHeader),
	(MakeHuffmanHeader), (MakeDRIHeader), (MakeHeaders),
	(gst_rtp_jpeg_depay_setcaps), (gst_rtp_jpeg_depay_process),